--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>음성을 텍스트로.</title>
-
     <style>
       .contents {
         max-width: 700px;
@@ -25,7 +24,7 @@
   </head>
   <body>
     <div class="contents" contenteditable>
-      <p>말을 해보세요. 문자로 바꿔드립니다.</p>
+      <p>마이크를 허용하고 말을 해보세요. 문자로 바꿔드립니다.</p>
     </div>
 
     <script>
